# kohonen-pics

./: README.md  kohonen-pics.cabal
src/: Main.hs  SOM.hs
